2004-12-03  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/pod.c (xnpod_calibration_thread): Fix stupid time
	reference bug.

2004-12-02  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/task.c (rt_task_self): Add self descriptor retrieval
	function.
	(rt_task_slice): Add routine to setup the round-robin credit.

	* nucleus/timer.c (xntimer_enqueue_aperiodic): Enforce new
	internal priority of timers.

2004-12-01  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/alarm.c: Add alarm support.

	* include/nucleus/asm-*/system.h (xnarch_sysalloc,
	xnarch_sysfree): Use vmalloc support for sizes >= 128Kb.

2004-11-30  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/pod.c (xnpod_set_thread_periodic): Fix start mode with
	idate == XN_INFINITE (i.e. do not enter any initial wait state).
	(xnpod_resume_thread): Fix interesting corner case involving
	partial resumption of a thread still blocked on a primary XNDELAY
	condition.

	* skins/rtai/types.h: RT_TIME_INFINITE -> TM_INFINITE,
	RT_TIME_NONBLOCK -> TM_NONBLOCK for consistency purpose with other
	namings.

2004-11-29  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/event.c (rt_event_clear): Add service to clear a set
	of flags from an event group.

	* skins/rtai/timer.h: RT_TIMER_UNSET/ONESHOT -> TM_UNSET/ONESHOT
	for consistency with other namings.

2004-11-28  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: fusion-0.6.5

2004-11-28  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to Adeos 2.6.9-i386-r9c1.

	* skins/rtai/task.c (rt_task_create): Allow for creation in
	suspended state passing T_SUSP.
	(rt_task_start): Apply CPU affinity.

	* skins/rtai/task.h (T_CPU): Fix for multiple cpu affinity.

	* skins/rtai/event.c: Rename rt_event_post() -> rt_event_signal(),
	rt_event_pend() -> rt_event_wait() for consistency purpose with
	the condvar support.

2004-11-28  Jan Kiszka <kiszka@rts.uni-hannover.de>

	* skins/rtai/sem.c: Export sem_broadcast().

2004-11-27  Philippe Gerum  <rpm@xenomai.org>
