@@ -66,53 +66,55 @@
 #define __rtai_task_inquire       13
 #define __rtai_task_notify        14
 #define __rtai_task_set_mode      15
-#define __rtai_timer_start        16
-#define __rtai_timer_stop         17
-#define __rtai_timer_read         18
-#define __rtai_timer_tsc          19
-#define __rtai_timer_ns2ticks     20
-#define __rtai_timer_ticks2ns     21
-#define __rtai_timer_inquire      22
-#define __rtai_sem_create         23
-#define __rtai_sem_bind           24
-#define __rtai_sem_delete         25
-#define __rtai_sem_p              26
-#define __rtai_sem_v              27
-#define __rtai_sem_inquire        28
-#define __rtai_event_create       29
-#define __rtai_event_bind         30
-#define __rtai_event_delete       31
-#define __rtai_event_wait         32
-#define __rtai_event_signal       33
-#define __rtai_event_clear        34
-#define __rtai_event_inquire      35
-#define __rtai_mutex_create       36
-#define __rtai_mutex_bind         37
-#define __rtai_mutex_delete       38
-#define __rtai_mutex_lock         39
-#define __rtai_mutex_unlock       40
-#define __rtai_mutex_inquire      41
-#define __rtai_cond_create        42
-#define __rtai_cond_bind          43
-#define __rtai_cond_delete        44
-#define __rtai_cond_wait          45
-#define __rtai_cond_signal        46
-#define __rtai_cond_broadcast     47
-#define __rtai_cond_inquire       48
-#define __rtai_queue_create       49
-#define __rtai_queue_bind         50
-#define __rtai_queue_delete       51
-#define __rtai_queue_alloc        52
-#define __rtai_queue_free         53
-#define __rtai_queue_send         54
-#define __rtai_queue_recv         55
-#define __rtai_queue_inquire      56
-#define __rtai_heap_create        57
-#define __rtai_heap_bind          58
-#define __rtai_heap_delete        59
-#define __rtai_heap_alloc         60
-#define __rtai_heap_free          61
-#define __rtai_heap_inquire       62
+#define __rtai_task_self          16
+#define __rtai_task_slice         17
+#define __rtai_timer_start        18
+#define __rtai_timer_stop         19
+#define __rtai_timer_read         20
+#define __rtai_timer_tsc          21
+#define __rtai_timer_ns2ticks     22
+#define __rtai_timer_ticks2ns     23
+#define __rtai_timer_inquire      24
+#define __rtai_sem_create         25
+#define __rtai_sem_bind           26
+#define __rtai_sem_delete         27
+#define __rtai_sem_p              28
+#define __rtai_sem_v              29
+#define __rtai_sem_inquire        30
+#define __rtai_event_create       31
+#define __rtai_event_bind         32
+#define __rtai_event_delete       33
+#define __rtai_event_wait         34
+#define __rtai_event_signal       35
+#define __rtai_event_clear        36
+#define __rtai_event_inquire      37
+#define __rtai_mutex_create       38
+#define __rtai_mutex_bind         39
+#define __rtai_mutex_delete       40
+#define __rtai_mutex_lock         41
+#define __rtai_mutex_unlock       42
+#define __rtai_mutex_inquire      43
+#define __rtai_cond_create        44
+#define __rtai_cond_bind          45
+#define __rtai_cond_delete        46
+#define __rtai_cond_wait          47
+#define __rtai_cond_signal        48
+#define __rtai_cond_broadcast     49
+#define __rtai_cond_inquire       50
+#define __rtai_queue_create       51
+#define __rtai_queue_bind         52
+#define __rtai_queue_delete       53
+#define __rtai_queue_alloc        54
+#define __rtai_queue_free         55
+#define __rtai_queue_send         56
+#define __rtai_queue_recv         57
+#define __rtai_queue_inquire      58
+#define __rtai_heap_create        59
+#define __rtai_heap_bind          60
+#define __rtai_heap_delete        61
+#define __rtai_heap_alloc         62
+#define __rtai_heap_free          63
+#define __rtai_heap_inquire       64
 
 struct rt_arg_bulk {
 
